--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,41 @@
 /*
     GENERAL
 */
+.container{
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+}
 
+.pink{
+    color: #E53170;
+}
 
 /*
     HEADER
 */
-
+h1{
+    margin: 30px;
+}
 
 /*
     MAIN
 */
+main > p{
+    margin: 30px;
+}
+
+.cards>*{
+    float: left;
+    background-color: #0F0E17;
+    width: calc(100% / 4);
+    color:white;
+    height: 100px;
+    margin: 30px;
+}
+
+.clearfix::after{
+    content:"";
+    display:table;
+    clear:both;
+}
