--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,16 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family: 'Fredoka', sans-serif;
+}
+
 /*
     GENERAL
 */
 .container{
     max-width: 1000px;
     margin: 0 auto;
-    text-align: center;
 }
 
 .pink{
@@ -25,6 +28,8 @@
 */
 h1{
     margin: 30px;
+    text-align: center;
+    font-size: 50px;
 }
 
 /*
@@ -32,19 +37,43 @@ h1{
 */
 main > p{
     margin: 30px;
-}
-
-.cards>*{
-    float: left;
-    background-color: #0F0E17;
-    width: calc(100% / 4);
-    color:white;
-    height: 100px;
-    margin: 30px;
+    text-align: center;
 }
 
 .clearfix::after{
     content:"";
     display:table;
     clear:both;
+}
+
+
+
+.cards > *{
+    float: left;
+    background-color: #0F0E17;
+    width: calc((100% / 3) - 20px);
+    margin: 20px;
+    color:white;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+}
+
+.cards > * > img{
+    float: left;
+    height: 100px;
+    margin-right: 20px;
+}
+
+.cards-profile{
+    padding: 20px;
+}
+
+.cards-profile > *{
+    height: 20px;
+    font-size: 15px;
+}
+
+.email{
+    color: aqua;
 }
